# IoT-AI-Laboratory-Safety-System-on-CoreIoT-with-Yocto-Linux

./: README.md
src/hello-app/hello-c/: CMakeLists.txt
src/hello-app/hello-c/include/: hello.h
src/hello-app/hello-c/src/: hello.c  main.c
src/hello-app/hello-py/: hello.py
src/lsmy-app/lsmy_app/: app.py
src/lsmy-hello/: CMakeLists.txt
src/lsmy-hello/include/: lsmy_hello.h
src/lsmy-hello/src/: lsmy_hello.c
src/lsmy-python-app/lsmy_python_app/: app.py
src/lsmy-python-lib/: pyproject.toml
src/lsmy-python-lib/lsmy_python_lib/: button_handler.py  command_runner.py  global_store.py  hello.py  ipc.py  wifi_config_manager.py  wifi_mode_manager.py
src/lsmy-webserver-service/: provision-web-backend.py
src/lsmy-webserver/lsmy_webserver/: main.py  manager.py
src/lsmy-webserver/webserver/: index.html
src/lsmy-webserver/webserver/css/: style.css
src/lsmy-webserver/webserver/js/: script.js
src/run-lsmy/: run-lsmy.py
